Resolves: tdf#126366 revert use of SfxDispatcher::Lock

Revert "tdf#121607 defer other requests until password dialog is dismissed"

This reverts commit 205aeffda1a29865576fb865f23dfb6761ebfab1

as far as I can see the original problem doesn't reappear anyway

Change-Id: If5fd3383f3473662bc87a367fad2c1febe1c6a23
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/90375
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>